UUID PK (#100)
* Update migration

* Update tests

* Cleanup

* Cleanup

* Fix test
