# src/serializers/session/default.serializer.ts
@@ -1,5 +1,0 @@
-import { BaseSerializer } from '../base.serializer';
-
-export class SessionDefaultSerializer extends BaseSerializer {
-  protected attributes = ['id', 'tokenJWT', 'createdAt', 'updatedAt'];
-}
