# src/serializers/user/default.serializer.ts
@@ -1,5 +1,0 @@
-import { BaseSerializer } from '../base.serializer';
-
-export class UserDefaultSerializer extends BaseSerializer {
-  protected attributes = ['id', 'email', 'createdAt', 'updatedAt'];
-}
